syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/greenblat17/auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UserInfo {
  string name = 1;
  string email = 2;
  Role role = 3;
  string password = 4;
}

message CreateRequest {
  UserInfo info = 1;
}

message CreateResponse {
  int64 id = 1;
}

enum Role {
  UNKNOWN = 0;
  ADMIN = 1;
  USER = 2;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  User user = 1;
}

message DeleteRequest {
  int64 id = 1;
}
